--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
         <h2>Work Accessories</h2>
         <div class="grid">
             <div class="product">
-                <img src="C:\project\image folder\elegant.jpg" alt="Work Accessory 1">
+                <img src="elegant.jpg" alt="Work Accessory 1">
                 <p>Elegant Desk Tray</p>
             </div>
             <div class="product">
