--- a/shop-by.html
+++ b/shop-by.html
@@ -29,11 +29,11 @@
     <section class="categories">
         <div class="grid">
             <div class="category">
-                <img src="C:\project\image folder\printedbag.jpg" alt="Bag Printing">
+                <img src="printedbag.jpg" alt="Bag Printing">
                 <p>Bag Printing</p>
             </div>
             <div class="category">
-                <img src="C:\project\image folder\lahenhara.jpg" alt="Bandhej & Lahariya">
+                <img src="lahenhara.jpg" alt="Bandhej & Lahariya">
                 <p>Bandhej & Lahariya</p>
             </div>
             <div class="category">
